# honeybadger-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  dev-requirements.txt  lint-requirements.txt  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: check-pr-title.yml  code-quality.yml  pylint.yml  pypi-publish.yml  python.yml
docs/superpowers/plans/: 2026-07-20-llm-instrumentation-phase1.md  2026-07-20-llm-instrumentation-phase2.md  2026-07-22-llm-instrumentation-phase3.md
docs/superpowers/specs/: 2026-07-11-llm-instrumentation-design.md  2026-07-20-llm-instrumentation-phase3-design.md
examples/django_app/: requirements.txt
examples/django_app/app/: urls.py
examples/django_app/honeybadger_example/: settings.py  urls.py
examples/llm_app/: README.md  app.py  requirements.txt
examples/oban_app/: README.md  app.py  docker-compose.yml  requirements.txt
honeybadger/: __init__.py  config.py  config_types.py  connection.py  core.py  events_worker.py  fake_connection.py  middleware.py  notice.py  payload.py  plugins.py  protocols.py  utils.py
honeybadger/contrib/: __init__.py  asgi.py  aws_lambda.py  celery.py  db.py  django.py  flask.py  llm.md  oban.md  oban.py  starlette.py
honeybadger/contrib/llm/: __init__.py  _bridge.py  _policy.py  _semconv.py
honeybadger/tests/: __init__.py  test_config.py  test_connection.py  test_core.py  test_events_worker.py  test_fake_connection.py  test_middleware.py  test_notice.py  test_payload.py  test_plugins.py  test_utils.py  utils.py
honeybadger/tests/contrib/: llm_helpers.py  llm_recording.py  test_asgi.py  test_celery.py  test_db.py  test_django.py  test_fastapi.py  test_flask.py  test_llm.py  test_llm_agents.py  test_llm_anthropic.py  test_llm_bedrock.py  test_llm_integration.py  test_llm_langchain.py  test_llm_policy.py  test_llm_semconv.py  test_oban.py  test_starlette.py
honeybadger/tests/contrib/django_test_app/: urls.py
scripts/: install_frameworks.sh
