# TODO: if we ensure setuptools>=61 then this entire file
# can be moved inside the pyroject.toml [project] section
# https://setuptools.pypa.io/en/latest/userguide/quickstart.html

[metadata]
name = honeybadger
version = attr: honeybadger.version.__version__
description = Send Python and Django errors to Honeybadger
long_description = file: README.md, CHANGELOG.md
keywords = Django, error tracking, monitoring, uptime, heartbeat

url = https://github.com/honeybadger-io/honeybadger-python
; download_url: The URL for downloading the package distribution.
; project_urls: Additional URLs associated with the project (e.g., Bug Tracker, Documentation, Source Code, etc.).

author = Dave Sullivan
author_email = dave@davesullivan.ca
maintainer = Pangratios Cosma
maintainer_email = pagcosma@gmail.com

license = MIT  ;, file: LICENSE
license_files =
    LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Framework :: Django
    Topic :: System :: Monitoring

[options]
packages =
    ; honeybadger
    ; honeybadger.contrib
    find:

python_requires = >=3.7

install_requires =
    psutil
    six
; TODO: move psutil/six from above into requirements.txt file?
    ; file: requirements.txt
; no! build doesn't require all that

; tests_require =
;     file: requirements.txt
; test_suite = tox

; [options.package_data]
; honeybadger = *.txt, *.rst
; * = *.txt, *.rst
; hello = *.msg

; [options.packages.find]
; exclude =
;     examples*
;     tools*
;     docs*
;     my_package.tests*
